syntax = "proto3";
import "google/protobuf/any.proto";

package com.test.anyt;
message AnyTest{
    string msg =1;
    google.protobuf.Any content = 2;
}
