syntax = "proto3";

message TestMessage{
    int32 age =1;
    string first_name = 2;
    string last_name = 3;
    bytes picture = 4; // jpg file
    bool is_verified= 5;
    float height = 6;

    repeated string phone_numbers = 7;
}